infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prxy-service
spec:
  selector:
    app: prxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
