infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prxy-ingress
spec:
  rules:
  - http:
      paths: []
